style: fix form labels covering sidebar

--- a/frontend/src/assets/styles/components/form.scss
+++ b/frontend/src/assets/styles/components/form.scss
@@ -1,5 +1,5 @@
 .form-label {
-  @apply absolute -top-2 left-[0.25rem] z-50 rounded-xl bg-white px-2 text-sm text-space-neutral-100;
+  @apply absolute -top-2 left-[0.25rem] z-40 rounded-xl bg-white px-2 text-sm text-space-neutral-100;
 }
 
 .form-input {
